==================================================================================================
Changes for release 2.8.4
==================================================================================================
- Bug Fix (595) - FMC2 part compiling improperly if not inputs connected.
- Bug Fix (621) - ADC part errant code if ADC part named incorrectly.
==================================================================================================
Changes for release 2.8.3 (Released 2/24/14)
==================================================================================================
- Bug Fix: Model with EXC part fails to compile. Problem was that EXC part was not in
  list of signal sources.
- Bug Fix to DacKillIop and DacKillTimed parts which prevents ability to reset the trip condition
  with input still in fault state.
- Bug Fix (523) Epics binary input taking on values other than zero or one. Code modified such
  that RCG EPICS sequencer would detect this error and not pass invalid values to real-time code.
  Fix also forces valid value back to EPICS record.
- Bug Fix (596) Correct naming scheme for matrix elements of RampMuxMatrix to match similar parts
- Bug Fix (597) Make a single matrix in MEDM for RampMuxMatrix, with each element split horizontally 
==================================================================================================
Changes for release 2.8.2
==================================================================================================
- Bug fix: Use of PHASE and EzCa parts produced errors in DAQ .ini file for associated EPICS
           records. 
	- File feCodeGen.pl modified to move EzCa part variables to end of shared mem header file
	- Phase parts (standard and wfs) writing of EPICS channels fixed in fmseq.pl
= Bug Fix: fmseq.pl modified to not add white space at end of EPICS channel names written to DAQ
	   .ini files. 